--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,3 +13,9 @@
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+
+android {
+    androidResources {
+        noCompress 'tflite'
+    }
+}
